k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ldap-jwt-app
  labels:
    name: ldap-jwt-app
